fix jumpto color

--- a/app/assets/stylesheets/explore.css.less
+++ b/app/assets/stylesheets/explore.css.less
@@ -172,7 +172,7 @@
 //      overflow-y: auto;
       label{
         font:14px 'sourcesans_pro', 'sans-serif';
-        color: #62CBF2;
+        color: #d67456;
         margin:0px 0px 5px;
         text-transform:normal !important;
       }
